--- a/WorkshopB/Rapport/main.tex
+++ b/WorkshopB/Rapport/main.tex
@@ -1,17 +1,20 @@
 % vim:tw=72 sw=2 ft=tex
-%         File: main.tex
-% Date Created: 2016 Apr 05
-%  Last Change: 2016 Apr 05
 %     Compiler: pdflatex
-%       Author: Lamn
-\documentclass[12pt,a4paper]{article}
+
+\documentclass[12pt, a4paper]{article}
+
 \usepackage{amsmath, amssymb}
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage[english]{babel}
 \usepackage{graphicx}
+\usepackage[margin=0.5in]{geometry}
+\usepackage{float}
+
+\graphicspath{{../matlab/fig/}}
 
 \begin{document}
 
+\section*{Task 2}
+  \input{part3.tex}
 
 \end{document}
