Updated the report a little

--- a/WorkshopB/Rapport/main.tex
+++ b/WorkshopB/Rapport/main.tex
@@ -10,11 +10,23 @@
 
 \graphicspath{{./fig/}}
 
+\title{MF2007 - Workshop B}
+
+\author{
+Adam Lang \\ 861110-3956
+\and
+Gabriel Andersson Santiago \\ 910706-4538
+\and 
+Andreas Fr\"oderberg \\ 880730-7577
+}
+
 \begin{document}
+\maketitle
 \section*{Task 1}
-\section*{Task 2}
+  \input{part1}
+\section*{Task 2: Writing Controller Code}
   \input{part2}
-\section*{Task 3}
+\section*{Task 3: Robustness to parameter uncertainty and sensor noise}
   \input{part3}
 
 \end{document}
