--- a/WorkshopB/Rapport/part3.tex
+++ b/WorkshopB/Rapport/part3.tex
@@ -2,7 +2,7 @@ Since the plant have a transfer function as,
 \begin{equation}
   G_o(s)=\frac{25.15}{s+2.157}
 \end{equation}
-and an $A_m(s)$ of same order should be choosen, the following functions is
+and an $A_m(s)$ of same order should be chosen, the following functions is
 used,
 \begin{align*}
     A_m(s)=s+\omega_1 \\
@@ -16,7 +16,7 @@ with
 These values gives the plot seen in figure \ref{fig:sens31org}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=80mm]{plot31org.png}
+  \includegraphics[width=\linewidth]{plot31org.png}
   \caption{The sensitivity and conmplementary sensitivity function}
   \label{fig:sens31org}
 \end{figure}
@@ -24,11 +24,11 @@ when the poles for $A_0(s)$ is increased to five times $A_m(s)$ the
 results in figure \ref{fig:sens31fast} is obtained. 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=80mm]{plot31fast.png}
+    \includegraphics[width=\linewidth]{plot31fast.png}
     \caption{$S_e$ and $T_e$ with five times faster $A_o(s)$ poles}
     \label{fig:sens31fast}
 \end{figure}
 From the plots we can see that there is a possibility to adjust the
-system to be less sensitive to noice and disturbances from eather the
+system to be less sensitive to noise and disturbances from either the
 sensor or the plant. This means that if there is a good plant model,
-there is moore room for sensornoice.
+there is more room for sensor noise.
