--- a/WorkshopB/Rapport/main.tex
+++ b/WorkshopB/Rapport/main.tex
@@ -7,6 +7,7 @@
 \usepackage[english]{babel}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage[maring=0.5in]{geometry}
 
 \graphicspath{{./fig/}}
 
